# rufus-win7

./: .gitignore  BUILD.gn  README.md  configure  configure.ac  rufus.sln  workon.patch
.github/: issue_template.md
res/loc/: build_embedded_loc.bat  rufus.loc
src/: BUILD.gn  darkmode.c  dev.c  drive.c  format.c  license.h  net.c  rufus.c  rufus.h  rufus.rc  stdfn.c  stdlg.c  ui.c  winio.h
src/bled/: BUILD.gn  platform.h
src/ext2fs/: BUILD.gn  com_err.h
src/getopt/: BUILD.gn
src/libcdio/: BUILD.gn
src/ms-sys/: BUILD.gn
src/msvc-missing/: BUILD.gn
src/syslinux/: BUILD.gn
src/wimlib/: BUILD.gn
src/wimlib/wimlib/: compiler.h
