# getopt (Minimal getopt implementation)

import("//build/config/precompiled_header.gni")
import("//build/config/static_shared.gni")

# POSIX getopt for Windows
static_library("getopt") {
  configs -= [ "//build/config/win:nominmax", ]
  configs += [ ":getopt_config" ]

  sources = [
    "getopt.h",
  ]

  sources += [
    "getopt.c",
    "getopt1.c",
  ]

  #public_deps = []
}

config("getopt_config") {
  configs = []

  cflags = [
    "-Wno-deprecated-non-prototype",
  ]

  include_dirs = [
    "../",
  ]

  defines = [
    "HAVE_STRING_H",
  ]
}
